k8s-prod.yml
apiVersion: v1
kind: Namespace
metadata:
  name: tp-devops-prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: tp-devops-prod
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:8
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        hostPath:
          path: /home/elon/mysql-prod
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: tp-devops-prod
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql
  clusterIP: 10.96.0.102
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: tp-devops-prod
  name: webapp-back
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp-back
  template:
    metadata:
      labels:
        app: webapp-back
    spec:
      containers:
        - image: docker.io/cronozok/tpidevopsdespuesvemospublic-back:dev
          imagePullPolicy: Always
          name: tpidevopsdespuesvemospublic-back
          ports:
            - containerPort: 9000
              name: webapp-back
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: tp-devops-prod
  name: webapp-front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp-front
  template:
    metadata:
      labels:
        app: webapp-front
    spec:
      containers:
        - image: docker.io/cronozok/tpidevopsdespuesvemospublic-front:latest
          imagePullPolicy: Always
          name: tpidevopsdespuesvemospublic-front
          ports:
            - containerPort: 3000
              name: webapp-front
---
apiVersion: v1
kind: Service
metadata:
  namespace: tp-devops-prod
  name: service-front
spec:
  selector:
    app: webapp-front
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: tp-devops-prod
  name: service-back
spec:
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    app: webapp-back
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: tp-devops-prod
  name: ingress-webapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /prod
            pathType: Prefix
            backend:
              service:
                name: service-front
                port:
                  number: 3000
          - path: /prod-api/(.+)
            pathType: Prefix
            backend:
              service:
                name: service-back
                port:
                  number: 9000
---
